# ED19B007_Abhiyaan_Software

./: README.md  abhiyaan.txt
Section A/catkin_ws/devel/: .catkin  _setup_util.py
Section A/catkin_ws/devel/lib/beginner_tutorials/: gawtam2list.py
Section A/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  turtlebot_tut.pc  turtlesim_cleaner.pc
Section A/catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
Section A/catkin_ws/devel/share/turtlebot_tut/cmake/: turtlebot_tutConfig.cmake
Section A/catkin_ws/devel/share/turtlesim_cleaner/cmake/: turtlesim_cleanerConfig.cmake
Section A/catkin_ws/install/: .rosinstall  setup.sh
Section A/catkin_ws/install/lib/pkgconfig/: beginner_tutorials.pc
Section A/catkin_ws/install/share/beginner_tutorials/: package.xml
Section A/catkin_ws/install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
Section A/catkin_ws/src/beginner_tutorials/: CMakeLists.txt
Section A/catkin_ws/src/beginner_tutorials/scripts/: gawtam2list.py
Section A/catkin_ws/src/turtlesim_cleaner/: CMakeLists.txt  package.xml
Section B/ComputerVision/ImageCV/: final.py  trial1.py
Section B/ComputerVision/VideoCV/: crg_video.py
Section B/Programming/: gawtam.cpp
