<?xml version="1.0"?>
<package format="2">
<name>turtlesim_cleaner</name>
 <version>0.1.0</version>
 <description>The turtlesim_cleaner package</description>

  
<maintainer email="gawtamcr3@gmail.com">Gawtam</maintainer>
<license>BSD</license>
<url type="website">http://wiki.ros.org/turtlesim_cleaner</url>
<author email="gawtamcr3@gmail.com">Gawtam</author>


 
<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
</package>
